chore: adjust trigger and memory size

--- a/serverless.yml
+++ b/serverless.yml
@@ -3,16 +3,15 @@ service: gasmon # NOTE: update this with your service name
 provider:
   name: aws
   runtime: nodejs4.3
-#  stage: dev
   region: us-west-2
-  memory: 128
+  memorySize: 128
   timeout: 10
 
 functions:
   gasmon:
     handler: handler.gasmon
     events:
-      - schedule: "cron(0 4 ? * SUN *)"
+      - schedule: "cron(0 */12 ? * SAT,SUN *)"
 
 #    Define function environment variables here
 #    environment:
